@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-07-31T16:14:34Z",
+  "timestamp" : "2022-08-01T08:16:14Z",
   "count_outdated" : 424,
   "uniques_outdated" : 229,
-  "count" : 450,
-  "uniques" : 242,
+  "count" : 451,
+  "uniques" : 243,
   "clones" : [
     {
       "timestamp": "2022-07-20T00:00:00Z",
@@ -84,6 +84,13 @@
     },
     {
       "timestamp": "2022-07-31T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-08-01T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
